--- a/latex_template/letterfonts.tex
+++ b/latex_template/letterfonts.tex
@@ -1,7 +1,7 @@
 % Mathfrak primes
-\newcommand{\km}{\mathfrak m}
-\newcommand{\kp}{\mathfrak p}
-\newcommand{\kq}{\mathfrak q}
+\newcommand{\km}{\mathfrak{m}}
+\newcommand{\kp}{\mathfrak{p}}
+\newcommand{\kq}{\mathfrak{q}}
 
 %---------------------------------------
 % Blackboard Math Fonts :-
