--- a/latex_template/macros.tex
+++ b/latex_template/macros.tex
@@ -149,6 +149,8 @@
 \newcommand{\braces}[1]{\lbr #1 \rbr}
 \newcommand{\brangle}[1]{\left\langle #1 \right\rangle}
 
+\newcommand{\laplace}[1]{\cll\braces{#1}}
+
 \newcommand{\suchthat}{\medspace\middle|\medspace}
 \newcommand{\given}{\medspace\middle|\medspace}
 \newcommand{\sqbracks}[1]{\lsb #1 \rsb}
