--- a/latex_template/preamble.tex
+++ b/latex_template/preamble.tex
@@ -7,6 +7,7 @@
 \allowdisplaybreaks
 \usepackage{undertilde}
 \usepackage{xfrac}
+\usepackage{mathtools}
 \usepackage[makeroom]{cancel}
 \usepackage{mathtools}
 \usepackage{bookmark}
