--- a/2025_sem2/MATH2100/MATH2100_A2_Kasumagic_M_44430266.tex
+++ b/2025_sem2/MATH2100/MATH2100_A2_Kasumagic_M_44430266.tex
@@ -50,7 +50,7 @@
     \begin{enumerate}[label=(\roman*), itemsep=-3pt, topsep=0pt]
       \item Find all critical points of the system.
       \item Use linearisation to classify the nature and stability of the critical points
-      \item Use the chain rule to solve for the phase curves $y_1 = y_2(y_1)$.
+      \item Use the chain rule to solve for the phase curves $y_2 = y_2(y_1)$.
       \item Does the linearised system exhibit qualitatively similar behaviour as the nonlinear?
     \end{enumerate}
     \item (Mathematica) Verify results from part (b)(ii), (iii), and (iv) by plotting a vector field.
@@ -64,7 +64,123 @@
   \end{enumerate}
 }
 \sol (a)
+$$
+  \Let y_1 = x,\qquad y_2 = \dot{x}.
+$$
+$$
+  \Then \dot{y}_1 = y_2,\qquad \dot{y}_2 = cy_2 + 4y_1 - y_1^3
+$$
+Therefore, the second order ODE, as a system of first order ODEs is given by
+$$
+  \begin{cases}
+    \dot{y}_1 = y_2 \\
+    \dot{y}_2 = cy_2 + 4y_1 - y_1^3
+  \end{cases}
+$$
 
+\sol (b)(i) \\
+Letting $c=0$, we have
+$$
+  \begin{cases}
+    \dot{y}_1 = y_2 \\
+    \dot{y}_2 = 4y_1 - y_1^3
+  \end{cases}
+$$
+Critical points satisfy $\dot{y}_1 = \dot{y}_2 = 0$. \\
+If $\dot{y}_1 = 0$ then $y_2 = 0$. \\
+If $\dot{y}_2 = 0$ then $0 = 4y_1 - y_1^3 = y_1(4 - y_1^2)$. This means $y_1\in\braces{0, -2, 2}$. \\
+Therefore, we have critical points at:
+$$
+  (0, 0),\qquad (-2,0),\qquad (2,0)
+$$
+
+\sol (b)(ii) \\
+We find the Jacobian of the system,
+$$
+  J(y_1,y_2) = \begin{pmatrix} \del{\dot{y}_1}{y_1} & \del{\dot{y}_1}{y_2} \\ \del{\dot{y}_2}{y_1} & \del{\dot{y}_2}{y_2} \end{pmatrix} = \begin{pmatrix} \del{}{y_1}y_2 & \del{}{y_2}y_2 \\ \del{}{y_1}(4y_1 - y_1^3) & \del{}{y_2}(4y_1 - y_1^3) \end{pmatrix} = \begin{pmatrix} 0 & 1 \\ 4 - 3y_1^2 & 0 \end{pmatrix}
+$$
+Now, we can substitute our 3 critical points:
+$$
+  J(0,0) = \begin{pmatrix} 0 & 1 \\ 4 & 0 \end{pmatrix},\quad \lm^2 - 4 = 0 \implies \lm = \pm 2.
+$$
+Real eigenvalues with opposite sign $\implies$ the critical point is an unstable saddle point, along eigenvectors $(1,2)^\rmt$ for $\lm=2$ and $(1,-2)^\rmt$ for $\lm=-2$.
+$$
+  J(2,0) = \begin{pmatrix} 0 & 1 \\ -8 & 0 \end{pmatrix},\quad \lm^2 + 8 = 0 \implies \lm=\pm2\sqrt{2}i
+$$
+Complex eigenvalues $\implies$ stable centre of the linearised system. Rotation is clockwise.
+$$
+  J(-2,0) = \begin{pmatrix} 0 & 1 \\ -8 & 0 \end{pmatrix},\quad \lm^2 + 8 = 0 \implies \lm=\pm2\sqrt{2}i
+$$
+Exact same nature and stability as previous. \\
+
+\sol (b)(iii) \\
+For the phase curve $y_2 = y_2(y_1)$, we note
+$$
+  \dyd[y_2]{y_1} = \frac{\dot{y}_2}{\dot{y}_1} = \frac{4y_1 - y_1^3}{y_2}.
+$$
+We can collect terms,
+$$
+ \dyd[y_2]{y_1} = \frac{4y_1 - y_1^3}{y_2} \iff y_2\d y_2 = \bracks{4y_1 - y_1^3}\d y_1.
+$$
+Let's now integrate both sides:
+$$
+ \int y_2\d y_2 = \int \bracks{4y_1 - y_1^3}\d y_1 \iff \frac{1}{2}y_2^2 = 2y_1^2 - \frac{1}{4}y_1^4 + C_1.
+$$
+That is to say,
+$$
+  y_2^2 = 4y_1^2 - \frac{1}{2}y_1^4 + C
+$$
+
+\sol(b)(iv) \\
+The linearised phase plane is qualitatively similar to the nonlinear system near each critical points: a saddle at the origin and centers at $(2,0)$ and $(-2,0)$. However we must be cautious because linearisation is a local tool and the global features (like how trajectories join up across wells) is not determined by the linear model alone. \\
+
+\clearpage
+\sol(c) \\
+\begin{figure}[h!]
+  \begin{center}
+    \includegraphics[width=5.5in]{Q1c.png}
+    \caption{HAND DRAWN (*in paint). Note the critical points in red, the nullclines in light blue, and the stability/directionality of the spirals highlighed in darkerblue.}
+  \end{center}
+\end{figure}
+
+\newpage
+\sol(d)(i) \\
+Letting $c=2$, we have
+$$
+  \begin{cases}
+    \dot{y}_1 = y_2 \\
+    \dot{y}_2 = 2y_2 + 4y_1 - y_1^3
+  \end{cases}
+$$
+Critical points satisfy $\dot{y}_1 = \dot{y}_2 = 0$. \\
+If $\dot{y}_1 = 0$ then $y_2 = 0$. \\
+If $\dot{y}_2 = 0$ then $0 = 2y_2 + 4y_1 - y_1^3 = (4 - y_1^2)y_1 + 2y_2$, but since $y_2=\dot{y}_1=0$ at a critical point, we can simplify this to $0=(4-y_1^2)y_1 \implies y_1\in{0,-2,2}$. \\
+Therefore, we get the same critical points as when $c=0$, namely,
+$$
+  (0, 0),\qquad (-2,0),\qquad (2,0)
+$$
+
+\sol (d)(ii) \\
+The Jacobian for $c=2$ is similar as that for $c=0$:
+$$
+  J(y_1,y_2) = \begin{pmatrix} \del{\dot{y}_1}{y_1} & \del{\dot{y}_1}{y_2} \\ \del{\dot{y}_2}{y_1} & \del{\dot{y}_2}{y_2} \end{pmatrix} = \begin{pmatrix} 0 & 1 \\ 4 - 3y_1^2 & 2 \end{pmatrix}.
+$$
+Now, we can substitute our 3 critical points:
+$$
+  J(0,0) = \begin{pmatrix} 0 & 1 \\ 4 & 2 \end{pmatrix} \implies \lm = 1 \pm\sqrt{5}.
+$$
+One eigenvalue is less than zero $\lm_1 = 1 - \sqrt{5}$, and the other, $\lm_2 = 1 + \sqrt{5}$ is greater than 0. Hence, we have an unstable saddle. The unstable eigenvector is $(1, 1+\sqrt{5})^\rmt$, while the stable eigenvector is $(1, 1-\sqrt{5})$.
+$$
+  J(-2,0) = \begin{pmatrix} 0 & 1 \\ -8 & 2 \end{pmatrix} \implies \lm = 1\pm\sqrt{7}i
+$$
+Because we have $\Real\lm=1>0$, we have unstable spirals, spinning clockwise. Further, we have $y_1'=0\iff y_2=0$, hence the gradient on the $y_1$-axis is vertical: a vertical nullclines.
+$$
+  J(2,0) = \begin{pmatrix} 0 & 1 \\ -8 & 2 \end{pmatrix} \implies \lm = 1\pm\sqrt{7}i
+$$
+So the analysis is exactly the same as the previous.
+
+\sol(d)(iii) \\
+Since all three equilibria are hyperbolic ($\det J(y_1,y_2)\neq0$), the linearised system is equivilent to the nonlinear system, in some neighbourhood around each critical point. Therefore, the types and stability at these critical points between either system are the same.
 
 \newpage
 \qs{6 marks}{
@@ -83,6 +199,100 @@
   \end{enumerate}
 }
 \sol (a)
+\begin{lstlisting}[language=Mathematica]
+In[1] :=  f1[y1_, y2_] := -2 y1 (3 - y2 - y1);
+In[2] :=  f2[y1_, y2_] :=  y2 (-4 + y1 + 2 y2);
+
+In[3] :=  critRules = Solve[{f1[y1, y2] == 0, f2[y1, y2] == 0}, {y1, y2}];
+In[4] :=  critPts = ({y1, y2} /. critRules)
+
+Out[4]= {{0,0},{0,2},{2,1},{3,0}} 
+\end{lstlisting}
+
+\sol (b)
+\begin{lstlisting}[language=Mathematica]
+In[1] :=  J = D[{f1[y1, y2], f2[y1, y2]}, {{y1, y2}}]
+Out[1]:=  {{2 y1-2 (3-y1-y2),2 y1},{y2,-4+y1+4 y2}}
+In[2] :=  Do[
+            Module[{pt, A, eigs},
+              pt   = critPts[[k]];
+              A    = J /. Thread[{y1, y2} -> pt];
+              eigs = Eigenvalues[A];
+              Print[pt, " -> Eigenvalues: ", eigs];
+              ],{k, Length[critPts]}
+            ]
+[OUTPUT:]
+{0,2} -> Eigenvalues: {4,-2}
+{2,1} -> Eigenvalues: {3+Sqrt[5],3-Sqrt[5]}
+{3,0} -> Eigenvalues: {6,-1}
+{0,0} -> Eigenvalues: {-6,-4}
+\end{lstlisting}
+Therefore, the critical point at 
+\begin{itemize}[itemsep=0em]
+  \item (0,0) is a stable node (2 real negative eigenvalues)
+  \item (0,2) is an unstable saddle (2 real, opposite sign eigenvalues)
+  \item (2,1) is an unstable saddle (2 real, opposite sign eigenvalues)
+  \item (3,0) is an unstable node (2 real positive eigenvalues)
+\end{itemize}
+
+\sol (c)
+\begin{lstlisting}
+In[1] :=  nullcline1 = Reduce[f1[y1, y2] == 0, {y1, y2}]
+In[2] :=  nullcline2 = Reduce[f2[y1, y2] == 0, {y1, y2}]
+In[3] :=  {nullcline1, nullcline2}
+Out[3]:=  y1==0||y2==3-y1
+Out[4]:=  y2==0||y2==2-y1/2 
+\end{lstlisting}
+
+\sol(d)
+\begin{lstlisting}
+In[1] :=  phasePortrait = StreamPlot[
+            {f1[y1, y2], f2[y1, y2]},
+            {y1, Sequence @@ {-1, 6}}, {y2, Sequence @@ {-1, 4}},
+            StreamStyle -> Directive[GrayLevel[0.35], Arrowheads[0.02]],
+            StreamPoints -> Fine,
+            PlotRange -> All,
+            FrameLabel -> (Style[#, 14] & /@ {"y1", "y2"}),
+            ImageSize -> 520
+          ];
+  
+In[2] :=  nullcline1 = ContourPlot[
+            f1[y1, y2] == 0,
+            {y1, Sequence @@ {-1, 6}}, {y2, Sequence @@ {-1, 4}},
+            ContourStyle -> {Thick, Red},
+            PlotLegends -> Placed[{Style["f1=0", Red]}, {0.85, 0.15}],
+            PlotRange -> All
+          ];
+
+In[3] :=  nullcline2 = ContourPlot[
+            f2[y1, y2] == 0,
+            {y1, Sequence @@ {-1, 6}}, {y2, Sequence @@ {-1, 4}},
+            ContourStyle -> {Thick, Blue},
+            PlotLegends -> Placed[{Style["f2=0", Blue]}, {0.85, 0.08}],
+            PlotRange -> All
+          ];
+
+In[4] :=  critPtsGraphic = Graphics[{
+             {Black, PointSize[0.02], Point[critPts]},
+             Table[
+               Inset[
+                 Style[ToString[pt], 12, Black, Background -> White],
+                 pt, {Left, Bottom}, {Automatic, Automatic}
+               ],
+               {pt, critPts}
+             ]
+          }];  
+In[5] :=  Show[phasePortrait, nullcline1, nullcline2, critPtsGraphic, PlotRange -> All]
+Out[5]:=
+\end{lstlisting}
+
+\clearpage
+\begin{figure}[h!]
+  \begin{center}
+    \includegraphics[width=5.5in]{Q2d.png}
+    \caption{Final phase space plot for Question 2(d). Note clearly labeled critical points in black, the nullclines in red, and the lines of $0$ or $\infty$ gradient in blue.}
+  \end{center}
+\end{figure}
 
 
 \newpage
@@ -132,7 +342,30 @@ We'll apply the Laplace transform, then solve for $\laplace{y(t)}(s) =: Y(s)$
   \laplace{y}(s) &= Y \\
   \laplace{1}(s) &= \frac{1}{s} \\
   \intertext{After substituting these values and doing some simplifying, we find that}
-  Y'(s^2 + 2s) + Y(2s - 4)  &= 1 + \frac{2}{s}.
+  Y'(s^2 + 2s) + Y(2s + 4)  &= 1 + \frac{2}{s}.
+  \intertext{Le'ts noe divide through by $s(s+2)$}
+  Y' + Y\frac{2s+4}{s(s+2)}  &= \frac{1}{s(s+2)} + \frac{2}{s^2(s+2)} \\
+  Y' + Y\frac{2}{s}  &= \frac{s+2}{s^2(s+2)} \\
+  Y' + \frac{2}{s} Y  &= \frac{1}{s^2} \\
+  \intertext{We note that this is the exact same DE as was given (and solved) in the previous question! This allows us to conclude that}
+  Y(s) &= \frac{1}{s} + \frac{C}{s^2}
+\end{align*}
+
+\sol(b)(ii)\\
+Now we'll apply the inverse Laplace transform to $Y(s)$, hoping to yield the solution, $y(t)$.
+\begin{align*}
+  \laplace{Y(s)}\inv(t) &= \laplace{\frac{1}{s} + \frac{C}{s^2}}\inv(t) \\
+  \intertext{We'll start by applying linearity}
+  \laplace{Y(s)}\inv(t) &= \laplace{\frac{1}{s}}\inv(t) + C\laplace{\frac{1}{s^2}}\inv(t) \\
+  \intertext{From the table we have}
+  \ignorealign{\laplace{1}(s) = \frac{1}{s}\quad\text{and}\quad\laplace{t}(s) = \frac{1}{s^2}}
+  \intertext{Applying them, we get}
+  \laplace{Y(s)}\inv(t) &= 1 + Ct = y(t)
+  \intertext{Applying the initial condition now,}
+  y'(t) &= \dd{t}(1 + Ct) \\
+    &= C \\
+  y'(0) = 2 &\iff C = 2 \\
+  \tf y(t) = 1 + 2t.
 \end{align*}
 
 
